# gh-space-shooter

./: CLAUDE.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
app/: README.md  pyproject.toml
app/src/: main.py
app/src/templates/: index.html
app/templates/: index.html
src/gh_space_shooter/: github_client.py
src/gh_space_shooter/game/: render_context.py
src/gh_space_shooter/game/drawables/: bullet.py  enemy.py  explosion.py  ship.py
