[project]
name = "gh-space-shooter-app"
version = "0.1.0"
description = "Web app wrapper for gh-space-shooter GIF generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gh-space-shooter",
    "fastapi[standard]",
    "uvicorn[standard]",
    "jinja2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
app = "main:app"